cartograph needs a bit more line height to avoid y overflow in large blocks

--- a/sass/skins/sitrus.scss
+++ b/sass/skins/sitrus.scss
@@ -43,7 +43,7 @@ $cartograph-font-url: "/assets/CartographCF";
 
   // Cartograph CF needs a slightly higher line-height than Tabi's default 1.4
   // to avoid vertical overflow in code blocks.
-  pre { line-height: 1.51; }
+  pre { line-height: 1.55; }
 }
 
 // Customize syntax highlighting
